(feat): Robust API/v3 implemented
